container/ocp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-teddycloud
  labels:
    name: app-teddycloud
